# LLM-Zoomcamp-2026

./: .gitignore  README.md  agents.ipynb  hw1.ipynb  hw1_rag_helper.py  notebook.ipynb  persisted_rag_ingest.ipynb  pyproject.toml  rag.ipynb  rag_helper.py
Module1: RAG/: notebook.ipynb  persisted_rag.ipynb
Module2: Embedding/: pyproject.toml  requirements.txt  vector_embedding.ipynb
Module2: Embedding/llm-zoomcamp-onnx/: pyproject.toml
Module2: Embedding/src/embedding/: __init__.py
Module3: Orchestration/: docker-compose.yml
llm_zoomcamp_2026.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
