[project]
name = "embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Utkarsh Garg", email = "utkarsh_garg@live.com" }
]
requires-python = ">=3.12,<3.14" 
dependencies = [
    "onnxruntime>=1.27.0",
    "tokenizers",
    "numpy",
    "tqdm",
    "minsearch",
    "requests",
    "gitsource>=0.0.5",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
llm-zoomcamp-2026 = { path = "..", editable = true }
